added basic parser

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "- deploy with db - how to use - tests",
   "main": "run.js",
   "dependencies": {
+    "casperjs": "^1.1.4",
+    "moment": "^2.22.2",
     "mysql2": "^1.6.1",
     "sequelize": "^4.39.0",
     "sequelize-cli": "^4.1.1"
